[package]
name = "geo-types"
version = "0.2.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/georust/geo"
documentation = "https://docs.rs/geo-types/"
readme = "../README.md"
keywords = ["gis", "geo", "geography", "geospatial"]
description = "Geospatial primitive data types"

[dependencies]
num-traits = "0.2"
serde = { version = "1", optional = true, features = ["derive"] }
spade = { git = "https://github.com/Stoeoef/spade", rev = "af782ef3ab01e91854b65d0df7d39739a78f3e2d", optional = true }
